--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-daproli==0.22
-jellyfish==0.9.0
-nltk==3.6.5
-numpy==1.21.2
-pandas==1.3.5
-pronto==2.5.0
-tqdm==4.62.3
-lxml==4.6.3
+daproli>=0.22
+jellyfish>=0.9.0
+nltk>=3.6.5
+numpy>=1.21.0,<1.25
+pandas>=1.1.0,<1.6.0
+pronto>=2.5.0
+tqdm>=4.62.3
+lxml>=4.6.3
